[tool.poetry]
name = "images-thesis-key"
version = "0.1.0"
description = ""
authors = ["macano_meli <mateo.cano@mercadolibre.com.co>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
